# genesis-togenizer

./: .gitignore  Cargo.toml  README.md  build_system.ps1
arcodular/: Cargo.toml
arcodular/src/: lib.rs  main.rs  memory.rs
assets/models/: binding_layer.onnx  binding_layer.onnx.data  materia_decoder.onnx  materia_encoder.onnx
crates/arcodular/: Cargo.toml
crates/arcodular/src/: external_api.rs  lib.rs  main.rs
crates/curo/: Cargo.toml
crates/curo/src/: config.rs  fusion.rs  lib.rs  model.rs
crates/genesis_runtime/: Cargo.toml
crates/genesis_runtime/src/: main.rs
crates/genulse/: Cargo.toml
crates/genulse/src/: arc.rs  gpu_engine.rs  imaginarium.rs  lib.rs  materia.rs
crates/inmece/: Cargo.toml
crates/inmece/src/: config.rs  lib.rs  model.rs
crates/togen/: Cargo.toml
crates/togen/src/: lib.rs
docs/: BITACORA_GENESIS_v1.1_RECOVERY.txt  RESEARCH_PHILOSOPHY.md
genulse/: Cargo.toml
genulse/src/: arc.rs  cell.rs  gpu_engine.rs  lib.rs
genulse/src/shaders/: visual_cortex.wgsl
src/: lib.rs
togen/: Cargo.toml  README.md
togen/scripts/: test_wasm.html
togen/src/: lib.rs
togen/tests/: similarity_test.rs
togen/www/: final-test.html  package-lock.json  package.json  tailwind.config.js  test_wasm_import.js  vite.config.ts
togen/www/src/: App.tsx  index.css
training/: README.md  prepare_atomic_dataset.py  train_autoencoder.py  visualize_atomic_dream.py
