[workspace]
resolver = "2"
members = [
    "crates/genulse",
    "crates/arcodular",
    "crates/togen",
    "crates/curo",
    "crates/genesis_runtime",
    "crates/inmece"
]

[package]
name = "maini"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
