[package]
name = "curo"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.8.2"
candle-nn = "0.8.2"
ort = { version = "2.0.0-rc.9", features = ["cuda", "ndarray"] }
ndarray = "0.16"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.2"
togen = { path = "../togen" }

